--- a/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
@@ -6,6 +6,20 @@
 
 <h1>Restaurants</h1>
 
+<form method="get">
+    <div class="form-group">
+        <div class="input-group">
+            <input type="search" class="form-control" 
+                   asp-for="SearchTerm" />
+            <span>
+                <button class="btn btn-default">
+                    <i class="fas fa-search"></i>
+                </button>
+            </span>
+        </div>
+    </div>
+</form>
+
 <table class="table">
     @foreach(var restaurant in Model.Restaurants)
     {
@@ -13,6 +27,11 @@
             <td>@restaurant.Name</td>
             <td>@restaurant.Location</td>
             <td>@restaurant.Cuisine</td>
+            <td>
+                <a class="btn btn-lg" asp-page="./Detail" asp-route-restaurantId="@restaurant.Id">
+                    <i class="glyphicon glyphicon-zoom-in"></i>
+                </a>
+            </td>
         </tr>
     }
 </table>
