--- a/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
+++ b/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
@@ -38,11 +38,12 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - OdeToFood - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer>
+<footer class="border-top footer text-muted">
+    @RenderSection("footer",required:false)
+    <div class="container">
+        &copy; 2020 - OdeToFood - <a asp-area="" asp-page="/Privacy">Privacy</a>
+    </div>
+</footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
