--- a/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/Delete.cshtml
+++ b/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/Delete.cshtml
@@ -2,7 +2,7 @@
 @model OdeToFood.Pages.Restaurants.DeleteModel
 
 @{
-    // Layout = null;
+    ViewData["Title"] = "Delete";
 }
 
 <!DOCTYPE html>
