--- a/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
+++ b/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,8 @@
     </div>
 
 <footer class="border-top footer text-muted">
-    @RenderSection("footer",required:false)
+    <vc:restaurant-count></vc:restaurant-count>
+    @RenderSection("footer", required: false)
     <div class="container">
         &copy; 2020 - OdeToFood - <a asp-area="" asp-page="/Privacy">Privacy</a>
     </div>
