--- a/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
+++ b/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
@@ -41,9 +41,9 @@
 <footer class="border-top footer text-muted">
     <vc:restaurant-count></vc:restaurant-count>
     @RenderSection("footer", required: false)
-    <div class="container">
-        &copy; 2020 - OdeToFood - <a asp-area="" asp-page="/Privacy">Privacy</a>
-    </div>
+    <p>&copy; 2020 - OdeToFood - <a asp-area="" asp-page="/Privacy">Privacy</a></p>
+    <img src="/OdeToFood.png" alt=""/>
+   
 </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
