--- a/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/ClientRestaurants.cshtml
+++ b/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/ClientRestaurants.cshtml
@@ -9,6 +9,14 @@
 
 @section Scripts
 {
+    <environment include="Development">
+        
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.21/datatables.min.css"/>
+        <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.21/datatables.min.js"></script>
+    </environment>
+
     <script>
        $(function (){
           $.ajax("/api/restaurants/", {method: "get"})
